# language-guesser

./: Cargo.toml  README.md  log  rust-toolchain
src/: github.rs  main.rs  ui.tiny  util.rs
src/providers/: github.rs  mod.rs
tmp/: events.rs  files.rs
