[package]
name = "language-guesser"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
async-trait = "0.1.51"
base64 = "0.13.0"
clap = { git = "https://github.com/modprog/clap", branch = "mychanges", features = ["wrap_help"] }
clap_generate = { git = "https://github.com/modprog/clap", branch = "mychanges" }
octocrab = "0.12.0"
rand = "0.8.4"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.130"
termion = "1.5.6"
tokio = { version = "1.11.0", features = ["full"] }
tui = "0.16.0"
