[package]
name = "language-guesser"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anathema = {git= "https://github.com/togglebyte/anathema", features = ["flume"]}
anyhow = "1.0.61"
async-trait = "0.1.57"
base64 = "0.13.0"
clap = { version = "3.2.17", features = ["wrap_help", "derive"] }
comfy-table = "6.0.0"
crossterm = "0.24.0"
octocrab = "0.17.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.143"
serde_yaml = "0.9.9"
tokio = { version = "1.20.1", features = ["full"] }
# tui = { version = "0.19.0", default-features = false, features = ["crossterm"] }
flume = "0.10.14"
futures = "0.3.23"
# xdg = "2.2.0"
# termion = "1.5.6"
